agregado div contenedor

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>GIT VSCODE csanabria</title>
 </head>
 <body>
+
+    <!-- DIV Contenedor 1 -->
+    <div class="container">
+        <div class="row">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, modi.
+        </div>
+    </div>
     
 </body>
 </html>
